samples/_failures_safe/1761252686_3a9378_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_226e2df8.c: In function ‘main’:
./samples/SAFE/__tmp_226e2df8.c:156:18: error: ‘start’ undeclared (first use in this function)
  156 |     dijkstra(&g, start
      |                  ^~~~~
./samples/SAFE/__tmp_226e2df8.c:156:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_226e2df8.c:156:23: error: expected ‘)’ at end of input
  156 |     dijkstra(&g, start
      |             ~         ^
      |                       )
./samples/SAFE/__tmp_226e2df8.c:156:5: error: expected declaration or statement at end of input
  156 |     dijkstra(&g, start
      |     ^~~~~~~~
